# smart_text_randomizer

./: MANIFEST.in  README.md  setup.cfg  setup.py
smart_text_randomizer/: __init__.py  text_randomizers.py
