[metadata]
name = smart_text_randomizer
version = attr: smart_text_randomizer.__version__
author = A.A. Suvorov
author_email = smartlegiondev@gmail.com
description = Smart Text Randomizer.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/smartlegionlab/smart_text_randomizer/
project_urls =
    Documentation = https://github.com/smartlegionlab/smart_text_randomizer/blob/master/README.md
    Release notes = https://github.com/smartlegionlab/smart_text_randomizer/releases
license = BSD 3-Clause License
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: OS Independent
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development :: Libraries :: Python Modules

keywords =
    text randomizer
    smart_text_randomizer
    smartlegionlab
    A.A Suvorov

[options]
package_dir =
packages = find:
python_requires = >= 3.6
include_package_data = true
zip_safe = false
install_requires =